--- a/index.html
+++ b/index.html
@@ -2,28 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>KarlTech - Soutien Informatique</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    /* 1) On masque le scroll de la page entière au départ */
-    html, body {
-      overflow: hidden;
-    }
-    /* 2) Section “Pourquoi choisir KarlTech ?” en plein écran */
-    #why {
-      height: 100vh;
-      overflow: hidden;
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-  </style>
 </head>
 <body>
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech" />
+    <img src="logo_karltech.png" alt="Logo KarlTech">
     <div>
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
@@ -38,63 +23,56 @@
   </nav>
 
   <main>
-    <!-- Carousel “Pourquoi choisir KarlTech ?” -->
+    <!-- Pourquoi choisir KarlTech ? -->
     <section id="why">
-      <h2>Pourquoi choisir KarlTech ?</h2>
-      <div class="why-container">
-        <div class="why-slider">
-          <div class="why-slide active" data-index="0">
-            <p><strong>Service à domicile ou à distance</strong> – Nous nous adaptons à votre emploi du temps et à votre confort. Que vous préfériez un technicien sur place ou un dépannage en ligne via AnyDesk, nous garantissons une intervention rapide et sécurisée. Chaque session à distance est chiffrée, et toutes vos données restent privées.</p>
-          </div>
-          <div class="why-slide" data-index="1">
-            <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée ? Pas de souci ! Nos plages horaires s’étendent jusqu’à 21 h en semaine, pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.</p>
-          </div>
-          <div class="why-slide" data-index="2">
-            <p><strong>Transparence totale</strong> – Avant chaque intervention, nous détaillons clairement les coûts et les étapes. Aucun supplément caché : vous savez exactement ce que vous payez. Vous recevez toujours un devis écrit et validé avant tout travail.</p>
-          </div>
-          <div class="why-slide" data-index="3">
-            <p><strong>Conseils clairs et adaptés</strong> – Fini le jargon technique incompréhensible ! Nous expliquons chaque étape en termes simples, pour que vous preniez des décisions éclairées et appreniez à garder votre système performant sur le long terme.</p>
-          </div>
-          <div class="why-slide" data-index="4">
-            <p><strong>Expérience concrète</strong> – Avec plus de 10 ans d’expertise en dépannage Windows, optimisation de PC et installation de périphériques, nous maîtrisons tous les scénarios, des plus courants aux plus complexes, avec rigueur et efficacité.</p>
-          </div>
-          <div class="why-slide" data-index="5">
-            <p><strong>Flexibilité et proximité</strong> – Basés à Shawinigan, nous intervenons rapidement chez vous ou à distance dans la région. En plus des soirées en semaine, nous sommes disponibles les fins de semaine pour vos urgences et assurons un suivi régulier de vos installations.</p>
-          </div>
+      <div class="why-slider">
+        <div class="why-slide active" data-index="0"
+             style="background-image:url('Service_domicile_distance.png')">
+          <p><strong>Service à domicile ou à distance</strong> – Nous nous adaptons à votre emploi du temps et à votre confort. Que vous préfériez un technicien sur place ou un dépannage en ligne via AnyDesk, nous garantissons une intervention rapide et sécurisée. Chaque session à distance est chiffrée, et toutes vos données restent privées.</p>
         </div>
-        <ul class="why-nav">
-          <li class="active" data-index="0"></li>
-          <li data-index="1"></li>
-          <li data-index="2"></li>
-          <li data-index="3"></li>
-          <li data-index="4"></li>
-          <li data-index="5"></li>
-        </ul>
+        <div class="why-slide" data-index="1"
+             style="background-image:url('Service_soiree.png')">
+          <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée ? Pas de souci ! Nos plages horaires s’étendent jusqu’à 21 h en semaine, pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.</p>
+        </div>
+        <div class="why-slide" data-index="2"
+             style="background-image:url('Service_transparence.png')">
+          <p><strong>Transparence totale</strong> – Avant chaque intervention, nous détaillons clairement les coûts et les étapes. Aucun supplément caché : vous savez exactement ce que vous payez. Vous recevez toujours un devis écrit et validé avant tout travail.</p>
+        </div>
+        <div class="why-slide" data-index="3"
+             style="background-image:url('Service_conseils.png')">
+          <p><strong>Conseils clairs et adaptés</strong> – Fini le jargon technique incompréhensible ! Nous expliquons chaque étape en termes simples, pour que vous preniez des décisions éclairées et appreniez à garder votre système performant sur le long terme.</p>
+        </div>
+        <div class="why-slide" data-index="4"
+             style="background-image:url('Service_experience.png')">
+          <p><strong>Expérience concrète</strong> – Avec plus de 10 ans d’expertise en dépannage Windows, optimisation de PC et installation de périphériques, nous maîtrisons tous les scénarios, des plus courants aux plus complexes, avec rigueur et efficacité.</p>
+        </div>
+        <div class="why-slide" data-index="5"
+             style="background-image:url('Service_flexibilite.png')">
+          <p><strong>Flexibilité et proximité</strong> – Basés à Shawinigan, nous intervenons rapidement chez vous ou à distance dans la région. En plus des soirées en semaine, nous sommes disponibles les fins de semaine pour vos urgences et assurons un suivi régulier de vos installations.</p>
+        </div>
       </div>
+      <ul class="why-nav">
+        <li class="active" data-index="0"></li>
+        <li data-index="1"></li>
+        <li data-index="2"></li>
+        <li data-index="3"></li>
+        <li data-index="4"></li>
+        <li data-index="5"></li>
+      </ul>
     </section>
 
-    <!-- Ces sections sont en dessous, mais restent cachées tant que le scroll est bloqué -->
+    <!-- Révélé uniquement après la dernière puce -->
     <section id="servicesSection">
       <h2>Nos services populaires</h2>
       <h3>Formatage et réinstallation système</h3>
-      <p>Optimisez un ordinateur lent ou infecté : effacement propre, réinstallation de Windows, mises à jour et pilotes.</p>
-
-      <h3>Suppression de virus et sécurisation</h3>
-      <p>Nettoyage complet de votre système avec suppression des logiciels malveillants et amélioration des performances.</p>
-
-      <h3>Assistance à distance</h3>
-      <p>Intervention rapide via AnyDesk, sans déplacement, pour une solution simple et efficace.</p>
-
-      <h3>Installation de pièces ou logiciels</h3>
-      <p>Mise à niveau de votre PC ou ajout de logiciels essentiels pour votre productivité et confort d’utilisation.</p>
-
-      <p><a href="services_tarifs.html">→ Voir tous les services et tarifs</a></p>
+      <p>Optimisez un ordinateur lent ou infecté…</p>
+      <!-- etc. -->
     </section>
 
     <section id="aproposSection">
       <h2>À propos</h2>
-      <p>Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
-      <p>Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.</p>
+      <p>Nous sommes une équipe passionnée…</p>
+      <!-- etc. -->
     </section>
   </main>
 
@@ -103,22 +81,18 @@
   </footer>
 
   <script>
-    const dots    = document.querySelectorAll('.why-nav li');
-    const slides  = document.querySelectorAll('.why-slide');
-    const whySect = document.getElementById('why');
+    const dots   = document.querySelectorAll('.why-nav li');
+    const slides = document.querySelectorAll('.why-slide');
+    const why    = document.getElementById('why');
 
     function setActive(idx) {
       slides.forEach(s => s.classList.toggle('active', s.dataset.index === idx));
       dots.forEach(d   => d.classList.toggle('active', d.dataset.index === idx));
     }
 
-    // Clic sur puce
-    dots.forEach(dot =>
-      dot.addEventListener('click', () => setActive(dot.dataset.index))
-    );
+    dots.forEach(d => d.addEventListener('click', () => setActive(d.dataset.index)));
 
-    // Roulette sur #why
-    whySect.addEventListener('wheel', e => {
+    why.addEventListener('wheel', e => {
       e.preventDefault();
       let curr = Array.from(dots).findIndex(d => d.classList.contains('active'));
       if (curr < 5) {
@@ -127,11 +101,10 @@
         if (next > 5) next = 0;
         setActive(String(next));
       } else if (e.deltaY > 0) {
-        // à la dernière puce + scroll vers le bas → on rétablit le scroll global
         document.documentElement.style.overflow = 'auto';
         document.body.style.overflow = 'auto';
       }
-    }, { passive: false });
+    }, {passive:false});
   </script>
 </body>
 </html>
