--- a/index.html
+++ b/index.html
@@ -95,14 +95,21 @@
     why.addEventListener('wheel', e => {
       e.preventDefault();
       let curr = Array.from(dots).findIndex(d => d.classList.contains('active'));
+      const up   = e.deltaY < 0;
+      const down = e.deltaY > 0;
+
       if (curr < 5) {
-        let next = curr + (e.deltaY > 0 ? 1 : -1);
-        if (next < 0) next = 5;
-        if (next > 5) next = 0;
+        let next = curr + (down ? 1 : -1);
+        if (next < 0) next = 0;
+        if (next > 5) next = 5;
         setActive(String(next));
-      } else if (e.deltaY > 0) {
-        document.documentElement.style.overflow = 'auto';
-        document.body.style.overflow = 'auto';
+      } else {
+        if (up) {
+          setActive('4');
+        } else if (down) {
+          document.documentElement.style.overflow = 'auto';
+          document.body.style.overflow = 'auto';
+        }
       }
     }, { passive: false });
   </script>
