--- a/index.html
+++ b/index.html
@@ -23,25 +23,31 @@
   </nav>
 
   <main>
-    <!-- Pourquoi choisir KarlTech ? -->
+    <!-- Section “Pourquoi choisir KarlTech ?” -->
     <section id="why">
       <div class="why-slider">
-        <div class="why-slide active" data-index="0" style="background-image:url('Service_domicile_distance.png')">
+        <div class="why-slide active" data-index="0"
+             style="background-image:url('Service_domicile_distance.png')">
           <p><strong>Service à domicile ou à distance</strong> – Nous nous adaptons à votre emploi du temps et à votre confort. Que vous préfériez un technicien sur place ou un dépannage en ligne via AnyDesk, nous garantissons une intervention rapide et sécurisée. Chaque session à distance est chiffrée, et toutes vos données restent privées.</p>
         </div>
-        <div class="why-slide" data-index="1" style="background-image:url('Service_soiree.png')">
+        <div class="why-slide" data-index="1"
+             style="background-image:url('Disponibilite_soir.png')">
           <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée ? Pas de souci ! Nos plages horaires s’étendent jusqu’à 21 h en semaine, pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.</p>
         </div>
-        <div class="why-slide" data-index="2" style="background-image:url('Service_transparence.png')">
+        <div class="why-slide" data-index="2"
+             style="background-image:url('Prix_fixe.png')">
           <p><strong>Transparence totale</strong> – Avant chaque intervention, nous détaillons clairement les coûts et les étapes. Aucun supplément caché : vous savez exactement ce que vous payez. Vous recevez toujours un devis écrit et validé avant tout travail.</p>
         </div>
-        <div class="why-slide" data-index="3" style="background-image:url('Service_conseils.png')">
+        <div class="why-slide" data-index="3"
+             style="background-image:url('Conseil_clair.png')">
           <p><strong>Conseils clairs et adaptés</strong> – Fini le jargon technique incompréhensible ! Nous expliquons chaque étape en termes simples, pour que vous preniez des décisions éclairées et appreniez à garder votre système performant sur le long terme.</p>
         </div>
-        <div class="why-slide" data-index="4" style="background-image:url('Service_experience.png')">
+        <div class="why-slide" data-index="4"
+             style="background-image:url('Experience_diplome.png')">
           <p><strong>Expérience concrète</strong> – Avec plus de 10 ans d’expertise en dépannage Windows, optimisation de PC et installation de périphériques, nous maîtrisons tous les scénarios, des plus courants aux plus complexes, avec rigueur et efficacité.</p>
         </div>
-        <div class="why-slide" data-index="5" style="background-image:url('Service_flexibilite.png')">
+        <div class="why-slide" data-index="5"
+             style="background-image:url('voyage_distance.png')">
           <p><strong>Flexibilité et proximité</strong> – Basés à Shawinigan, nous intervenons rapidement chez vous ou à distance dans la région. En plus des soirées en semaine, nous sommes disponibles les fins de semaine pour vos urgences et assurons un suivi régulier de vos installations.</p>
         </div>
       </div>
