--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </div>
         <div class="why-slide" data-index="1"
              style="background-image:url('Disponibilite_soir.png')">
-          <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée ? Pas de souci ! Nos plages horaires s’étendent jusqu’à 21 h en semaine, pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.</p>
+          <p>
+    <strong>Disponibilité en soirée</strong> – Vous travaillez en journée ? Pas de soucis ! Nos plages horaires s’étendent jusqu’à <strong>21h</strong> en semaine pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.
+  </p>
         </div>
         <div class="why-slide" data-index="2"
              style="background-image:url('Prix_fixe.png')">
