--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
         <li>Samedi et dimanche : 8 h à 18 h</li>
       </ul>
 
+      <section id="contact">
       <h3>Formulaire de contact</h3>
       <form action="https://formspree.io/f/mnnvdepz" method="POST">
         <input type="text" name="nom" placeholder="Votre nom" required />
