--- a/contact.html
+++ b/contact.html
@@ -26,26 +26,28 @@
     <section id="contact">
       <h2>Nous joindre</h2>
 
-      <div class="col">
-        <p><strong>Courriel :</strong> <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
-        <p><strong>Téléphone :</strong> <a href="tel:8738879620">873-887-9620</a></p>
-        <p><strong>Adresse :</strong> Shawinigan, QC</p>
+      <div class="contact-container">
+        <div class="col infos">
+          <p><strong>Courriel :</strong> <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
+          <p><strong>Téléphone :</strong> <a href="tel:8738879620">873-887-9620</a></p>
+          <p><strong>Adresse :</strong> Shawinigan, QC</p>
 
-        <h3>Horaires d’ouverture</h3>
-        <ul>
-          <li>Lundi au vendredi : 17h à 21h</li>
-          <li>Samedi et dimanche : 8h à 18h</li>
-        </ul>
-      </div>
+          <h3>Horaires d’ouverture</h3>
+          <ul>
+            <li>Lundi au vendredi : 17h à 21h</li>
+            <li>Samedi et dimanche : 8h à 18h</li>
+          </ul>
+        </div>
 
-      <div class="col">
-        <h3>Formulaire de contact</h3>
-        <form action="https://formspree.io/f/mnnvdepz" method="POST">
-          <input type="text" name="nom" placeholder="Votre nom" required>
-          <input type="email" name="email" placeholder="Votre adresse e-mail" required>
-          <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
-          <button type="submit">Envoyer</button>
-        </form>
+        <div class="col formu">
+          <h3>Formulaire de contact</h3>
+          <form action="https://formspree.io/f/mnnvdepz" method="POST">
+            <input type="text" name="nom" placeholder="Votre nom" required>
+            <input type="email" name="email" placeholder="Votre adresse e-mail" required>
+            <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
+            <button type="submit">Envoyer</button>
+          </form>
+        </div>
       </div>
     </section>
   </main>
