--- a/faq.html
+++ b/faq.html
@@ -2,63 +2,77 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FAQ – KarlTech</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>KarlTech – FAQ</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
-  <img src="logo_karltech.png" alt="Logo KarlTech" />
-  <div>
-    <h1>KarlTech</h1>
-    <p>Soutien informatique personnalisé à Shawinigan et environs</p>
-  </div>
-</header>
-
+    <img src="logo_karltech.png" alt="Logo KarlTech" />
+    <div>
+      <h1>KarlTech</h1>
+      <p>Soutien informatique personnalisé à Shawinigan et environs</p>
+    </div>
+  </header>
 
   <nav>
     <a href="index.html">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
-    <a href="#faq">FAQ</a>
+    <a href="faq.html" class="active">FAQ</a>
     <a href="contact.html">Contact</a>
-
   </nav>
 
-  <section id="faq">
-    <h2>FAQ – Questions Fréquentes</h2>
+  <main>
+    <section id="faq">
+      <h2>FAQ – Questions Fréquentes</h2>
 
-    <h3>1. Quels sont les services offerts par KarlTech ?</h3>
-    <p>Plusieurs services sont offerts. Veuillez consulter la section “Services et Tarifs” du site pour un aperçu détaillé.</p>
+      <div class="faq-container">
+        <h3>Quels services proposez-vous ?</h3>
+        <p>
+          Nous offrons un large éventail d'interventions : formatage et réinstallation de Windows,  
+          suppression de virus, installation de pièces (RAM, SSD, carte graphique),  
+          custom builds, sauvegarde et récupération de données, assistance à distance,  
+          installation de logiciels (Office, antivirus), et bien plus encore.
+        </p>
 
-    <h3>2. Est-ce que vous vous déplacez à domicile ?</h3>
-    <p>Oui, nous nous déplaçons dans Shawinigan et les environs pour un petit frais supplémentaire.</p>
+        <h3>Est-ce que vous vous déplacez ?</h3>
+        <p>
+          Oui, nous nous déplaçons dans Shawinigan et ses environs pour un petit frais supplémentaire.  
+          Pour les distances un peu plus longues, nous convenons ensemble du tarif au préalable.
+        </p>
 
-    <h3>3. Est-ce un service professionnel ?</h3>
-    <p>Bien sûr, nous restons très professionnels et nous faisons des suivis réguliers.</p>
+        <h3>Comment fonctionne le support à distance ?</h3>
+        <p>
+          Nous utilisons AnyDesk pour prendre la main sur votre ordinateur en toute sécurité.  
+          Chaque session est chiffrée et facturée au même tarif qu’une intervention sur place.
+        </p>
 
-    <h3>4. Combien de temps dure un formatage complet ?</h3>
-    <p>Un formatage complet peut varier selon le matériel, mais en moyenne, cela prend entre 1 h et 2 h.</p>
+        <h3>Combien de temps prend un formatage complet ?</h3>
+        <p>
+          Cela dépend du matériel et de la quantité de données :  
+          comptez généralement entre 1h et 2h pour une machine standard,  
+          mises à jour et pilotes inclus.
+        </p>
 
-    <h3>5. Offrez-vous du support à distance ?</h3>
-    <p>Oui, nous utilisons AnyDesk pour se connecter rapidement sur l’ordinateur de nos clients.</p>
+        <h3>Proposez-vous des sauvegardes avant toute intervention ?</h3>
+        <p>
+          Absolument : avant toute opération risquant d’effacer des données,  
+          nous effectuons une sauvegarde complète pour garantir la protection de vos fichiers.
+        </p>
 
-    <h3>6. Faut-il prendre rendez-vous ?</h3>
-    <p>Oui, nous demandons un rendez-vous pour respecter l’ordre de priorité. En cas d’urgence, n’hésitez pas à nous téléphoner.</p>
-
-    <h3>7. Est-ce que mes données seront perdues ?</h3>
-    <p>Nous effectuons une sauvegarde (backup) de vos données avant toute intervention critique, lorsque nécessaire.</p>
-
-    <h3>8. Faites-vous des PC personnalisés ?</h3>
-    <p>Oui, deux options : vous fournissez les pièces et nous faisons le montage, ou nous faisons une soumission et nous commandons les pièces pour vous.</p>
-
-    <h3>9. Quels modes de paiement acceptez-vous ?</h3>
-    <p>Nous acceptons les paiements par débit, crédit, virement Interac et argent comptant.</p>
-  </section>
+        <h3>Comment sont calculés vos tarifs pour un custom build ?</h3>
+        <p>
+          Vous pouvez nous fournir vos propres pièces ou nous demander un devis complet.  
+          Dans ce cas, nous sélectionnons le matériel selon votre budget et vos besoins,  
+          puis nous facturons au prix coûtant + main-d’œuvre.
+        </p>
+      </div>
+    </section>
+  </main>
 
   <footer>
-  <p><a href="index.html">&larr; Retour à l'accueil</a></p>
-  <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
-</footer>
-
+    &larr; <a href="index.html">Retour à l’accueil</a><br>
+    &copy; 2025 KarlTech. Tous droits réservés.
+  </footer>
 </body>
 </html>
