--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services et Tarifs - KarlTech</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>KarlTech – Services et Tarifs</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- En-tête -->
   <header>
-  <img src="logo_karltech.png" alt="Logo KarlTech" />
-  <div>
-    <h1>KarlTech</h1>
-    <p>Soutien informatique personnalisé à Shawinigan et environs</p>
-  </div>
-</header>
+    <img src="logo_karltech.png" alt="Logo KarlTech">
+    <div>
+      <h1>KarlTech</h1>
+      <p>Soutien informatique personnalisé à Shawinigan et environs</p>
+    </div>
+  </header>
 
-
+  <!-- Navigation -->
   <nav>
     <a href="index.html">Accueil</a>
-    <a href="services_tarifs.html">Services et Tarifs</a>
+    <a href="services_tarifs.html" class="active">Services et Tarifs</a>
     <a href="faq.html">FAQ</a>
     <a href="contact.html">Contact</a>
   </nav>
 
+  <!-- Contenu principal -->
   <main>
-    <section>
+    <section id="servicesSection">
       <h2>Nos services et tarifs</h2>
+
       <table>
         <thead>
           <tr>
@@ -72,12 +75,14 @@
           </tr>
         </tbody>
       </table>
+
+      <p><a href="index.html">&larr; Retour à l’accueil</a></p>
     </section>
   </main>
 
+  <!-- Pied de page -->
   <footer>
-    <p><a href="index.html">&larr; Retour à l'accueil</a></p>
-    <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
+    &copy; 2025 KarlTech. Tous droits réservés.
   </footer>
 </body>
 </html>
