--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- En-tête -->
   <header>
     <img src="logo_karltech.png" alt="Logo KarlTech">
     <div>
@@ -15,6 +16,7 @@
     </div>
   </header>
 
+  <!-- Navigation -->
   <nav>
     <a href="index.html">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
@@ -22,11 +24,13 @@
     <a href="contact.html" class="active">Contact</a>
   </nav>
 
+  <!-- Contenu principal -->
   <main>
     <section id="contact">
       <h2>Nous joindre</h2>
 
       <div class="contact-container">
+        <!-- Colonne infos -->
         <div class="col infos">
           <p><strong>Courriel :</strong> <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
           <p><strong>Téléphone :</strong> <a href="tel:8738879620">873-887-9620</a></p>
@@ -39,6 +43,7 @@
           </ul>
         </div>
 
+        <!-- Colonne formulaire -->
         <div class="col formu">
           <h3>Formulaire de contact</h3>
           <form action="https://formspree.io/f/mnnvdepz" method="POST">
@@ -52,6 +57,7 @@
     </section>
   </main>
 
+  <!-- Pied de page -->
   <footer>
     &larr; <a href="index.html">Retour à l’accueil</a><br>
     &copy; 2025 KarlTech. Tous droits réservés.
