--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>KarlTech – Accueil</title>
-  <!-- FEUILLE DE STYLE GLOBALE -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- ==================== En-tête ==================== -->
+
+  <!-- En-tête -->
   <header>
     <img src="logo_karltech.png" alt="Logo KarlTech">
     <div>
@@ -17,7 +17,7 @@
     </div>
   </header>
 
-  <!-- ==================== Navigation ==================== -->
+  <!-- Navigation -->
   <nav>
     <a href="index.html" class="active">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
@@ -25,10 +25,10 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-  <!-- ==================== Contenu principal ==================== -->
+  <!-- Contenu principal -->
   <main>
 
-    <!-- == Section “Pourquoi choisir KarlTech ?” == -->
+    <!-- Slider “Pourquoi choisir KarlTech ?” -->
     <section id="why">
       <div class="why-slider">
         <!-- Slide 1 -->
@@ -37,7 +37,7 @@
         </div>
         <!-- Slide 2 -->
         <div class="why-slide" data-index="1">
-          <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée&nbsp;? Pas de souci&nbsp;! Nos plages horaires s’étendent jusqu’à 21 h en semaine pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.</p>
+          <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée&nbsp;? Pas de souci&nbsp;! Nos plages horaires s’étendent jusqu’à 21h en semaine pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.</p>
         </div>
         <!-- Slide 3 -->
         <div class="why-slide" data-index="2">
@@ -68,7 +68,7 @@
       </ul>
     </section>
 
-    <!-- == Section “Nos services populaires” == -->
+    <!-- Nos services populaires -->
     <section id="servicesSection">
       <h2>Nos services populaires</h2>
 
@@ -87,7 +87,7 @@
       <p><a href="services_tarifs.html">→ Voir tous les services et tarifs</a></p>
     </section>
 
-    <!-- == Section « À propos » == -->
+    <!-- À propos -->
     <section id="aproposSection">
       <h2>À propos</h2>
       <p>Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
@@ -96,30 +96,42 @@
 
   </main>
 
-  <!-- ==================== Pied de page ==================== -->
+  <!-- Pied de page -->
   <footer>
     &larr; <a href="index.html">Retour à l’accueil</a><br>
     &copy; 2025 KarlTech. Tous droits réservés.
   </footer>
 
-  <!-- ==================== Script Slider ==================== -->
+  <!-- Script slider + défilement souris -->
   <script>
-    // IntersectionObserver + navigation par puce
-    document.addEventListener("DOMContentLoaded", () => {
-      const slides = document.querySelectorAll(".why-slide");
-      const dots   = document.querySelectorAll(".why-nav li");
+    (function() {
+      const slides = document.querySelectorAll('.why-slide');
+      const dots   = document.querySelectorAll('.why-nav li');
+      let index = 0;
 
-      function showSlide(idx) {
-        slides.forEach(s => s.classList.remove("active"));
-        dots.forEach(d => d.classList.remove("active"));
-        slides[idx].classList.add("active");
-        dots[idx].classList.add("active");
+      function goTo(i) {
+        slides.forEach(s=>s.classList.remove('active'));
+        dots.forEach(d=>d.classList.remove('active'));
+        slides[i].classList.add('active');
+        dots[i].classList.add('active');
+        index = i;
       }
 
-      dots.forEach(dot => {
-        dot.addEventListener("click", () => showSlide(dot.dataset.index));
+      // clic sur puce
+      dots.forEach(d=>{
+        d.addEventListener('click', ()=> goTo(Number(d.dataset.index)));
       });
-    });
+
+      // défilement à la roulette sur #why
+      const area = document.getElementById('why');
+      area.addEventListener('wheel', e=>{
+        e.preventDefault();
+        const dir = e.deltaY > 0 ? 1 : -1;
+        let next = (index + dir + slides.length) % slides.length;
+        goTo(next);
+      });
+    })();
   </script>
+
 </body>
 </html>
