--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KarlTech – Accueil</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <!-- En-tête -->
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech">
+    <img src="logo_karltech.png" alt="Logo KarlTech" />
     <div>
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
@@ -31,33 +31,25 @@
     <!-- Slider “Pourquoi choisir KarlTech ?” -->
     <section id="why">
       <div class="why-slider">
-        <!-- Slide 1 -->
         <div class="why-slide active" data-index="0">
-          <p><strong>Service à domicile ou à distance</strong> – Nous nous adaptons à votre emploi du temps et à votre confort. Que vous préfériez un technicien sur place ou un dépannage en ligne via AnyDesk, nous garantissons une intervention rapide et sécurisée. Chaque session à distance est chiffrée et toutes vos données restent privées.</p>
+          <p><strong>Service à domicile ou à distance</strong> – Nous nous adaptons à votre emploi du temps et à votre confort...</p>
         </div>
-        <!-- Slide 2 -->
         <div class="why-slide" data-index="1">
-          <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée&nbsp;? Pas de souci&nbsp;! Nos plages horaires s’étendent jusqu’à 21h en semaine pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.</p>
+          <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée ? Pas de souci ! Nos plages horaires s’étendent jusqu’à 21h...</p>
         </div>
-        <!-- Slide 3 -->
         <div class="why-slide" data-index="2">
-          <p><strong>Transparence totale</strong> – Avant chaque intervention, nous détaillons clairement les coûts et les étapes. Aucun supplément caché : vous savez exactement ce que vous payez. Vous recevez toujours un devis écrit et validé avant tout travail.</p>
+          <p><strong>Transparence totale</strong> – Avant chaque intervention, nous détaillons clairement les coûts...</p>
         </div>
-        <!-- Slide 4 -->
         <div class="why-slide" data-index="3">
-          <p><strong>Conseils clairs et adaptés</strong> – Fini le jargon technique incompréhensible ! Nous expliquons chaque étape en termes simples, pour que vous preniez des décisions éclairées et appreniez à garder votre système performant sur le long terme.</p>
+          <p><strong>Conseils clairs et adaptés</strong> – Fini le jargon technique ! Nous expliquons chaque étape en termes simples...</p>
         </div>
-        <!-- Slide 5 -->
         <div class="why-slide" data-index="4">
-          <p><strong>Expérience concrète</strong> – Avec plus de 10 ans d’expertise en dépannage Windows, optimisation de PC et installation de périphériques, nous maîtrisons tous les scénarios, des plus courants aux plus complexes, avec rigueur et efficacité.</p>
+          <p><strong>Expérience concrète</strong> – Forts de plus de 10 ans d’expertise, nous maîtrisons tous les scénarios...</p>
         </div>
-        <!-- Slide 6 -->
         <div class="why-slide" data-index="5">
-          <p><strong>Flexibilité et proximité</strong> – Basés à Shawinigan, nous intervenons rapidement chez vous ou à distance dans la région. En plus des soirées en semaine, nous sommes disponibles les fins de semaine pour vos urgences et assurons un suivi régulier de vos installations.</p>
+          <p><strong>Flexibilité et proximité</strong> – Basés à Shawinigan, nous intervenons rapidement chez vous...</p>
         </div>
       </div>
-
-      <!-- Puces de navigation -->
       <ul class="why-nav">
         <li class="active" data-index="0"></li>
         <li data-index="1"></li>
@@ -68,68 +60,55 @@
       </ul>
     </section>
 
-    <!-- Nos services populaires -->
+    <!-- Services populaires -->
     <section id="servicesSection">
       <h2>Nos services populaires</h2>
-
       <h3>Formatage et réinstallation système</h3>
-      <p>Optimisez un ordinateur lent ou infecté : effacement propre, réinstallation de Windows, mises à jour et pilotes.</p>
-
+      <p>Optimisez un ordinateur lent ou infecté : effacement propre, réinstallation de Windows...</p>
       <h3>Suppression de virus et sécurisation</h3>
-      <p>Nettoyage complet de votre système avec suppression des logiciels malveillants et amélioration des performances.</p>
-
+      <p>Nettoyage complet avec suppression des logiciels malveillants et optimisation des performances.</p>
       <h3>Assistance à distance</h3>
-      <p>Intervention rapide via AnyDesk, sans déplacement, pour une solution simple et efficace.</p>
-
+      <p>Intervention rapide via AnyDesk, sans déplacement.</p>
       <h3>Installation de pièces ou logiciels</h3>
-      <p>Mise à niveau de votre PC ou ajout de logiciels essentiels pour votre productivité et confort d'utilisation.</p>
-
+      <p>Mise à niveau de votre PC ou ajout de logiciels essentiels.</p>
       <p><a href="services_tarifs.html">→ Voir tous les services et tarifs</a></p>
     </section>
 
     <!-- À propos -->
     <section id="aproposSection">
       <h2>À propos</h2>
-      <p>Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
-      <p>Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.</p>
+      <p>Nous sommes une équipe passionnée de technologie et de dépannage...</p>
+      <p>Notre approche est personnalisée, sans jargon compliqué...</p>
     </section>
 
   </main>
 
   <!-- Pied de page -->
   <footer>
-    &larr; <a href="index.html">Retour à l’accueil</a><br>
+    &larr; <a href="index.html">Retour à l’accueil</a><br />
     &copy; 2025 KarlTech. Tous droits réservés.
   </footer>
 
-  <!-- Script slider + défilement souris -->
+  <!-- Script du slider -->
   <script>
-    (function() {
+    (function(){
       const slides = document.querySelectorAll('.why-slide');
       const dots   = document.querySelectorAll('.why-nav li');
-      let index = 0;
-
-      function goTo(i) {
+      let idx = 0;
+      function show(i){
         slides.forEach(s=>s.classList.remove('active'));
         dots.forEach(d=>d.classList.remove('active'));
         slides[i].classList.add('active');
         dots[i].classList.add('active');
-        index = i;
+        idx = i;
       }
-
-      // clic sur puce
-      dots.forEach(d=>{
-        d.addEventListener('click', ()=> goTo(Number(d.dataset.index)));
-      });
-
-      // défilement à la roulette sur #why
-      const area = document.getElementById('why');
-      area.addEventListener('wheel', e=>{
-        e.preventDefault();
-        const dir = e.deltaY > 0 ? 1 : -1;
-        let next = (index + dir + slides.length) % slides.length;
-        goTo(next);
-      });
+      dots.forEach(d=> d.onclick = ()=> show(+d.dataset.index));
+      document.getElementById('why')
+        .addEventListener('wheel', e=>{
+          e.preventDefault();
+          let next = (idx + (e.deltaY>0?1:-1) + slides.length) % slides.length;
+          show(next);
+        });
     })();
   </script>
 
